# sandbox

./: autograff_utils.py  colormotor_path.py  geom_tools.py  gfx.py  interactive.py  plot.py  setup.py  stroke_skeleton.py
lib/: CMakeLists.txt  mpc.cpp  render_utils.cpp  render_utils.h  sigma_lognormal.cpp  tracer.cpp
lib/arpack-arma/include/: SymEigsSolver.h
lib/arpack-arma/include/LinAlg/: LapackWrapperExtra.h
sandbox/: README.md  __init__.py  axi_helper.py  interactive.py  polygonizer.frag  sdf_polygonizer.py
sandbox/lib/: CMakeLists.txt  README.md  autograff_utils.i  autograff_utils.py  mpc.cpp  mpc.h  rasterizer.cpp  rasterizer.h  render_utils.cpp  render_utils.h  sigma_lognormal.cpp  sigma_lognormal.h  swig.sh  tracer.h
sandbox/lib/arpack-arma/include/LinAlg/: LapackWrapperExtra.h  TridiagEigen.h
